Issue MenuMobile Visibility

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -70,7 +70,7 @@ nav {
 	justify-content: center;
 	align-items: center;
 }
-@media (max-width: 640px) {
+@media (max-width: 740px) {
 	.menu {
 		display: block;
 	}
